# araby-ptc-rs

./: .env.example  .gitignore  404.html  CNAME  Dockerfile  README.md  bacon.toml  docker-compose.yml  fly.toml  index.html  justfile  print.html  searchindex.js  searchindex.json  veloxide-demo.postman_collection.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  stale.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-guide.yml  veloxide-backend-ci.yml
architecture/: design-patterns.html  index.html
architecture/decisions/: 0001-record-architecture-decisions.html  0002-use-rust-for-backend-software-development.html  index.html
components/: axum-web-framework.html  database.html  graphql.html  index.html  observability.html
crates/db/: Cargo.toml
crates/db/src/: README.md  error.rs  lib.rs
crates/prisma-cli/: Cargo.toml
crates/veloxide-server/: Cargo.toml
crates/veloxide-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/veloxide-server/src/configuration/: db_connection.rs  mod.rs  observability.rs  redis_connection.rs
crates/veloxide-server/src/domain/bank_account/: bank_account_aggregate.rs
crates/veloxide-server/src/presentation/bank_account/: bank_account_views.rs
docker/prometheus/: prometheus.yaml
docs/guide/: book.toml
docs/guide/src/: SUMMARY.md
docs/guide/src/architecture/: README.md  design-patterns.md
docs/guide/src/architecture/decisions/: 0002-use-rust-for-backend-software-development.md  README.md
docs/guide/src/architecture/design-patterns/: cqrs-es.md
docs/guide/src/components/: README.md  axum-web-framework.md  database.md  graphql.md  observability.md
docs/guide/src/getting-started/: README.md  folder-explanations.md  prerequisites.md  set-up-your-project.md  testing.md  tips.md
docs/guide/src/introduction/: README.md  why-rust.md
docs/guide/src/supporting-containers/: README.md  grafana.md  postgres.md  prometheus.md  tempo.md
getting-started/: folder-explanations.html  index.html  prerequisites.html  set-up-your-project.html  testing.html  tips.html
introduction/: index.html  why-rust.html
prisma/: schema.prisma
supporting-containers/: grafana.html  index.html  postgres.html  prometheus.html  tempo.html
