[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.6", default-features = false, features=["postgresql", "mysql"] }
serde = { version = "~1", features = ["derive"] }
thiserror = "~1"
axum = { version = "~0"}