[package]
name = "veloxide-server"
description = "Veloxide: Example Bank Account API"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Liam Woodleigh-Hardinge <liam.woodleigh@gmail.com>"]

[dependencies]
# Web / Async
axum = { version = "~0", features = ["macros"] }
hyper = { version = "~0", features = ["full"] }
tokio = { version = "~1", features = ["full"] }
tower = "~0"
axum-prometheus = "~0"
async-trait = "~0"
tower-http = {version= "~0", features = ["cors"]}

# OpenAPI
utoipa = { version = "~3", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "~3", features = ["axum"], optional = true }

## GraphQL
async-graphql = { version = "~5", optional = true, features = ["playground"] }
async-graphql-axum = { version = "~5", optional = true }

# Serialization
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde_yaml = "~0"
uuid = { version = "~1", features = ["v4", "serde"] }

# Persistence
sqlx = { version = "~0", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "postgres",
  "mysql",
  "json",
  "uuid",
  "offline",
] }

# Observability
tracing = { version = "~0", features = ["log", "log-always"] }
opentelemetry = {version ="0.18.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.11.0", features = ["tokio", "metrics"], optional = true }
tracing-subscriber = { version = "~0", optional = true, features = ["env-filter", "std"]}
tracing-opentelemetry = { version = "~0", optional = true }
tracing-log = { version = "~0", optional = true, features = ["env_logger"] }
tracing-bunyan-formatter = { version = "~0", optional = true }


# Frontend
ts-rs = { version = "~6", optional = true }

# Event sourcing
cqrs-es = "~0"
mysql-es = { version = "~0", optional = true}
postgres-es = { version = "~0", optional = true}

# OpenID Connect / OAuth2
oauth2 = "~4"
openidconnect = "~2"
url = "~2"
const_format = "~0"
tower-cookies = "~0"
redis = { version = "~0", features = ["tokio-comp"] }

# Misc
thiserror = "~1"
log = "~0"
dotenvy = "~0"
chrono = "~0"
derivative = "~2"
cfg-if = "~1"
db = { version = "~0", path = "../db" }

[features]
default = ["tracing", "graphql", "frontend", "postgres", "openapi", "bunyan"]
mysql = ["mysql-es", "sqlx/mysql"]
postgres = ["postgres-es", "sqlx/postgres"]
tracing = ["tracing-log", "tracing-subscriber", "tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp"]
graphql = ["async-graphql", "async-graphql-axum"]
frontend = ["ts-rs"]
openapi = ["utoipa", "utoipa-swagger-ui"]
bunyan = ["tracing-bunyan-formatter"]

[dev-dependencies]
anyhow = "~1"
pretty_assertions = "~1"
cucumber = "~0"
mockall = { version = "~0" }
coverage-helper = "~0"

[[test]]
name = "cucumber" # this should be the same as the filename of the test target
harness = false   # allows Cucumber to print output instead of libtest
